--- a/20_01_dvTooja_tab01.html
+++ b/20_01_dvTooja_tab01.html
@@ -662,7 +662,7 @@ $(document).ready( function() {
 	<div class="unit">	
 		<div class="unit_cont tabulatorWrap">
 			<!-- tabulator로 그리는 table 부분-->
-			<div id="example-table" class="tableStyle gridStyle center"></div>
+			<div id="dvJangmiToojaResult" class="tableStyle gridStyle center"></div>
 		</div>
 	</div>
 </div>
