--- a/z_z_index.html
+++ b/z_z_index.html
@@ -58,9 +58,8 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 	<li class=""><a href="#" class="inc_04" name="inc_04">물건보기<span class="new">N</span></a></li>
 	<li class=""><a href="#" class="inc_05" name="inc_05">히트맵보기<span class="new">N</span></a></li>
 
-	<li class=""><a href="#" class="inc_06" name="inc_06">contact us<span class="new">N</span></a></li>
-	<li class=""><a href="#" class="inc_07" name="inc_07">My Page<span class="new">N</span></a></li>
-	<li class=""><a href="#" class="inc_08" name="inc_08">공지사항//인트로<span class="new">N</span></a></li>
+	<li class=""><a href="#" class="inc_07" name="inc_07">contact us<span class="new">N</span></a></li>
+	<li class=""><a href="#" class="inc_08" name="inc_08">인트로<span class="new">N</span></a></li>
 
 
 	<li class="" style="margin:0 0px 0 30px; background:#f1f1f1;"><a href="#" class="inc_30" name="inc_30">css, js<span class="new">N</span></a></li>
@@ -274,7 +273,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="link" data-type="inc">lnbCont_02.html</span>
 			<span class="ex">좌메뉴 투자유망 지역검색 - index.html에 inculde되는 좌메뉴</span>
 			<span class="end">수정</span>
-			<span class="date">2018.02.09</span>
+			<span class="date">2018.02.13</span>
 			<span class="etc"></span>
 		</li>
 		<li>
@@ -289,7 +288,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span>좌메뉴 투자유망 지역검색 > 토지이용규제 해소물건</span>
 			<span class="link" data-type="inc">20_01_dvTooja_tab02.html</span>
 			<span class="ex">tab - 토지이용규제 해소물건</span>
-			<span class="end">완료</span>
+			<span class="end">완성</span>
 			<span class="date"></span>
 			<span class="etc">개발로 바로진행</span>
 		</li>
@@ -297,8 +296,16 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span>좌메뉴 투자유망 지역검색 > 개발적성 필지 검색</span>
 			<span class="link" data-type="inc">20_01_dvTooja_tab03.html</span>
 			<span class="ex">tab - 개발적성 필지 검색</span>
-			<span class="end">완료</span>
+			<span class="end">완성</span>
 			<span class="date"></span>
+			<span class="etc">개발로 바로진행</span>
+		</li>
+		<li>
+			<span>마커클릭 상세보기</span>
+			<span class="link" data-type="modal" data-width="800">20_02_detailView.html</span>
+			<span class="ex">검색결과 마커클릭시 오픈 오픈되는 모달</span>
+			<span class="end">완성</span>
+			<span class="date">2018.02.13</span>
 			<span class="etc">개발로 바로진행</span>
 		</li>
 	</ul>
@@ -320,8 +327,8 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span>좌메뉴 경•공매 물건 검색</span>
 			<span class="link" data-type="inc">lnbCont_03.html</span>
 			<span class="ex">좌메뉴 경•공매 물건 검색 - index.html에 inculde되는 좌메뉴</span>
-			<span class="end"></span>
-			<span class="date"></span>
+			<span class="end">완성</span>
+			<span class="date">2018.02.13</span>
 			<span class="etc"></span>
 		</li>
 	</ul>
@@ -375,20 +382,6 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 </div>
 
 <!-- contact us -->
-<div id="inc_06" class="codeList" style="display:none;">
-	<ul>
-		<li class="ulHead">
-			<span>구분</span>
-			<span class="link">파일명</span>
-			<span class="ex">설명</span>
-			<span class="end">작업현황</span>
-			<span class="date">최종 수정일</span>
-			<span class="etc">비고</span>
-		</li>
-	</ul>
-</div>
-
-<!-- My Page -->
 <div id="inc_07" class="codeList" style="display:none;">
 	<ul>
 		<li class="ulHead">
@@ -399,10 +392,35 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="date">최종 수정일</span>
 			<span class="etc">비고</span>
 		</li>
+
+		<li>
+			<span>my page</span>
+			<span class="link" data-type="modal" data-width="600">70_01_mypage.html</span>
+			<span class="ex">mypage</span>
+			<span class="end">완성</span>
+			<span class="date">2018.02.09</span>
+			<span class="etc"></span>
+		</li>
+		<li>
+			<span>공지사항</span>
+			<span class="link"  data-type="modal" data-width="1000">70_02_noticeList.html</span>
+			<span class="ex">공지사항</span>
+			<span class="end">미완성</span>
+			<span class="date"></span>
+			<span class="etc"></span>
+		</li>
+		<li>
+			<span>회사소개</span>
+			<span class="link"></span>
+			<span class="ex">회사소개</span>
+			<span class="end">미완성</span>
+			<span class="date"></span>
+			<span class="etc"></span>
+		</li>
 	</ul>
 </div>
 
-<!-- 공지사항//인트로 -->
+<!-- 인트로 -->
 <div id="inc_08" class="codeList" style="display:none;">
 	<ul>
 		<li class="ulHead">
@@ -412,6 +430,15 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="end">작업현황</span>
 			<span class="date">최종 수정일</span>
 			<span class="etc">비고</span>
+		</li>
+
+		<li>
+			<span>intro</span>
+			<span class="link"></span>
+			<span class="ex">intro</span>
+			<span class="end">미완성</span>
+			<span class="date"></span>
+			<span class="etc"></span>
 		</li>
 	</ul>
 </div>
@@ -463,7 +490,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="link">../css/map.css</span>
 			<span class="ex">실제 컨텐츠를 제어하는 css<br/> 실제 모습을 재정의의 가장 많이 수정되는 파일</span>
 			<span class="end">수정</span>
-			<span class="date">2018.02.09</span>
+			<span class="date">2018.02.13</span>
 			<span class="etc"></span>
 		</li>
 		
@@ -475,7 +502,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="link">../js/main.js</span>
 			<span class="ex">실제 컨텐츠를 제어하는 js<br/> 실제 모습을 재정의의 가장 많이 수정되는 파일</span>
 			<span class="end">수정</span>
-			<span class="date">2018.02.09</span>
+			<span class="date">2018.02.13</span>
 			<span class="etc"></span>
 		</li>
 	</ul>
@@ -499,7 +526,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="link">../img/이하모두</span>
 			<span class="ex"></span>
 			<span class="end"></span>
-			<span class="date">2018.02.08</span>
+			<span class="date">2018.02.13</span>
 			<span class="etc"></span>
 		</li>
 	</ul>
@@ -582,7 +609,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 
 		$('.codeList li span.date').each(function() {
 			var text = $(this).text();
-			if (text == '2018.02.09') {
+			if (text == '2018.02.13') {
 				$(this).css( {
 					'background':'black',
 					'color':'#fff',
@@ -596,7 +623,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 		$('span.new').removeClass('open');
 		$('.codeList span.date').each(function() {
 			var text = $(this).text();			
-			if (text == '2018.02.09') {
+			if (text == '2018.02.13') {
 				var parents = $(this).parents('.codeList').attr('id');				
 				$('.' + parents).find('span.new').addClass('open');
 				return;
