--- a/index.html
+++ b/index.html
@@ -375,7 +375,12 @@ var rdchBoxSetId = function(tId, name) {
 			<div id="dvStreetViewContent"></div>
 		</div>
 		
-		
+		<!-- 마우스 우클릭시 메뉴-->
+		<div id="dvContextMenu" class="context-menu">
+			<div class="context-menu-body">
+				<button id="btnContextLocAddress" class="context-btn">위치 주소보기</button>
+			</div>
+		</div>
 	</div>
 
 	
