--- a/20_01_dvTooja_tab01.html
+++ b/20_01_dvTooja_tab01.html
@@ -615,28 +615,13 @@ $(document).ready( function() {
 						</td>
 					</tr>
 					<tr>
-						<th>환경평가등급</td>
+						<th>환경평가등급<span class="subTh block">(1등급:투자유의)</span></td>
 						<td>
-							<span class="rdchBox">
-								<input type="checkbox" id="" name="" />
-								<label for="" class="labelCh"><em class="text">1등급(투자유의)</em></label>
-							</span>
-							<span class="rdchBox">
-								<input type="checkbox" id="" name="" />
-								<label for="" class="labelCh"><em class="text">2등급</em></label>
-							</span>
-							<span class="rdchBox">
-								<input type="checkbox" id="" name="" />
-								<label for="" class="labelCh"><em class="text">3등급</em></label>
-							</span>
-							<span class="rdchBox">
-								<input type="checkbox" id="" name="" />
-								<label for="" class="labelCh"><em class="text">4등급</em></label>
-							</span>
-							<span class="rdchBox">
-								<input type="checkbox" id="" name="" />
-								<label for="" class="labelCh"><em class="text">5등급(투자유망)</em></label>
-							</span>
+							<!-- 환경평가등급 Range -->
+							<div class="rangeSliderWrap">
+								<div id="jangmiEnvGrade" class="jangmiEnvGrade rangeSlider">
+								</div>
+							</div>
 						</td>
 					</tr>
 					<tr>
