--- a/index.html
+++ b/index.html
@@ -374,13 +374,17 @@ var rdchBoxSetId = function(tId, name) {
 			<div id="dvStreetViewHeader"><a href="#" class="pano-close"><span>×</span></a></div>
 			<div id="dvStreetViewContent"></div>
 		</div>
-		
+
 		<!-- 마우스 우클릭시 메뉴-->
 		<div id="dvContextMenu" class="context-menu">
 			<div class="context-menu-body">
-				<button id="btnContextLocAddress" class="context-btn">위치 주소보기</button>
+				<button id="btnContextLocAddress" class="context-btn"><span class="text">위치 주소보기</span></button>
+				<button id="" class="context-btn"><span class="text">다른 링크</span></button>
+				<button id="" class="context-btn"><span class="text">만약텍스트의 길이가 길다면 이렇게 표현됨</span></button>
 			</div>
 		</div>
+		
+		
 	</div>
 
 	
