--- a/lnbCont_02.html
+++ b/lnbCont_02.html
@@ -8,6 +8,10 @@ $(document).ready( function() {
 		arrows: false,
 	});
 
+	$('#jangmiEnvGrade').rangeSlider({
+		arrows: false,
+	});
+
 	///////////////////////////////////////
 	//장기 미집행 도시계획시설 검색 버튼 // 이전버튼
 	$('#toojaTabBox01_btn01').on('click', function() {		
