--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <link rel="stylesheet" href="css/style.css" />
 
 <script type="text/javascript" src="jquery/3.2.1/jquery.min.js" ></script>
-<script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=SgnlyXnzstmDsYDhele7&amp;submodules=panorama,geocoder"></script>
+<script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=SgnlyXnzstmDsYDhele7&submodules=panorama,geocoder"></script>
 <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps-panorama.js"></script>
 
 <script type="text/javascript" src="jquery-ui/1.12.0/jquery-ui.min.js"></script>
