--- a/z_z_index.html
+++ b/z_z_index.html
@@ -306,7 +306,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="ex">검색결과 마커클릭시 오픈 오픈되는 모달</span>
 			<span class="end">완성</span>
 			<span class="date">2018.02.13</span>
-			<span class="etc">개발로 바로진행</span>
+			<span class="etc"></span>
 		</li>
 	</ul>
 </div>
@@ -405,8 +405,8 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span>공지사항</span>
 			<span class="link"  data-type="modal" data-width="1000">70_02_noticeList.html</span>
 			<span class="ex">공지사항</span>
-			<span class="end">미완성</span>
-			<span class="date"></span>
+			<span class="end">완성</span>
+			<span class="date">2018.02.13</span>
 			<span class="etc"></span>
 		</li>
 		<li>
