--- a/70_02_noticeList.html
+++ b/70_02_noticeList.html
@@ -2,6 +2,7 @@
 $(document).ready( function() {
 	$('#noticeTable .contView').on('click', function(e) {	
 		noticeContShowHide(this);
+		setModalMarginTop($('#modalPopup'));
 	});
 });
 
