--- a/z_z_index.html
+++ b/z_z_index.html
@@ -331,6 +331,14 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="date">2018.02.13</span>
 			<span class="etc"></span>
 		</li>
+		<li>
+			<span>좌메뉴 경•공매 물건 상세보기</span>
+			<span class="link" data-type="modal" data-width="full">30_01_gyeongmaeDetail.html</span>
+			<span class="ex">좌메뉴 경•공매 물건 상세보기</span>
+			<span class="end">완성</span>
+			<span class="date">2018.02.14</span>
+			<span class="etc"></span>
+		</li>
 	</ul>
 </div>
 
